@@ -1,7 +1,8 @@
 package com.rom.util.base64;
 
-import sun.misc.BASE64Decoder; 
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
+
+
 
 
 /**
@@ -20,7 +21,7 @@ public class Base64Util {
      * @throws Exception          
      */              
     public static byte[] decryptBASE64(String key) throws Exception {               
-        return (new BASE64Decoder()).decodeBuffer(key);               
+        return Base64.getDecoder().decode(key);              
     }               
                   
     /**         
@@ -30,6 +31,6 @@ public class Base64Util {
      * @throws Exception          
      */              
     public static String encryptBASE64(byte[] key) throws Exception {               
-        return (new BASE64Encoder()).encodeBuffer(key);               
+        return Base64.getEncoder().encodeToString(key);               
     }       
 }
